<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F5F5DC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarVuelo">

    <TextView
        android:id="@+id/textView"
        android:layout_width="267dp"
        android:layout_height="35dp"
        android:layout_marginTop="44dp"
        android:background="#D2B48C"
        android:text="@string/actualizar_vuelo"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edtNumeroVuelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edt_codVuelo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/codigo_vuelo"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />

    <EditText
        android:id="@+id/edtNumeroVuelo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/numero_de_vuelo"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_codVuelo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edt_codVuelo"
        app:layout_constraintTop_toBottomOf="@+id/edt_codVuelo" />

    <EditText
        android:id="@+id/edtRetrasado"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/esta_retrasado_true_false"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNumeroVuelo" />

    <EditText
        android:id="@+id/edtCantidadPasajeros"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/cantidad_de_pasajeros"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRetrasado" />

    <EditText
        android:id="@+id/edtPrecio"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/precio"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCantidadPasajeros" />

    <EditText
        android:id="@+id/edtFechaSalida"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/fecha_salida"
        android:inputType="text|date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edtPrecio"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtPrecio"
        app:layout_constraintTop_toBottomOf="@+id/edtPrecio" />

    <EditText
        android:id="@+id/edt_idAerolinea"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/codigo_aerolinea"
        android:inputType="text"

        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnActualizarVuelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFechaSalida"
        app:layout_constraintVertical_bias="0.326" />

    <Button
        android:id="@+id/btnActualizarVuelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPrecio"
        app:layout_constraintVertical_bias="0.898" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="298dp"
        android:layout_height="32dp"
        android:text="@string/ingrese_los_datos"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_codVuelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>